--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@
     /* colors */
     --text: #000;
     --background: #fff;
-    --accent-dark: #760f36;
-    --accent: #de2e72;
-    --accent-light: #FFBCCC;
+    --accent-dark: #283618;
+    --accent: #3a5a40;
+    --accent-light: #a3b18a;
 
     /* fonts */
     --basefont: sans-serif;
