--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@
     /* colors */
     --text: #000;
     --background: #fff;
-    --accent-dark: #283618;
-    --accent: #3a5a40;
-    --accent-light: #a3b18a;
+    --accent-dark: #522e38;
+    --accent: #ff7aa2;
+    --accent-light: #ffc2d4;
 
     /* fonts */
     --basefont: sans-serif;
