--- a/style.css
+++ b/style.css
@@ -3,13 +3,13 @@
 
     /* colors */
     --text: #000;
-    --background: #fff;
-    --accent-dark: #522e38;
-    --accent: #ff7aa2;
+    --background: #e9d3d0;
+    --accent-dark: #e05780;
+    --accent: #ea638c;
     --accent-light: #ffc2d4;
 
 
-    
+
     /* fonts */
     --basefont: sans-serif;
     --titlefont: monospace;
