--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     /* colors */
     --text: #000;
     --background: #e9d3d0;
-    --accent-dark: #e05780;
+    --accent-dark: #d72483;
     --accent: #ea638c;
     --accent-light: #ffc2d4;
 
