--- a/style.css
+++ b/style.css
@@ -3,10 +3,10 @@
 
     /* colors */
     --text: #000;
-    --background: #e9d3d0;
-    --accent-dark: #d72483;
-    --accent: #ea638c;
-    --accent-light: #ffc2d4;
+    --background: #edeec9;
+    --accent-dark: #1b4332;
+    --accent: #31572c;
+    --accent-light: #90a955;
 
 
 
